--- a/assignment/index.html
+++ b/assignment/index.html
@@ -3,10 +3,21 @@
   <head>
     <meta charset="utf-8">
     <title>Unit 5, Part 2 - HTML/CSS Practice</title>
+    <link rel='stylesheet' href=assignment5.2.css>
   </head>
   <body>
-    <h1>Unit 5, Part 2 - HTML/CSS Practice</h1>
-    <p>Look at my cool music page.</p>
+    <header>
+      <h1>Unit 5, Part 2 - HTML/CSS Practice</h1>
+      <!-- Add an h2 element into the header that says YOUR NAME's Record Shop. -->
+      <h2>Zeyini's Record Shops</h2>
+    </header>
+    <div class= "container"> 
+      <p>Subscribe to buy my records </p>
+    </div>
+    <main>
+      <p>Look at my cool music page.</p>
+
+    </main>
     <!-- Create an unordered list with any questions you have -->
   </body>
 </html>
