created a div with cla ss contianer and added styles in css file.

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -12,7 +12,7 @@
       <h2>Zeyini's Record Shops</h2>
     </header>
     <div class= "container"> 
-      <p>Subscribe to buy my records </p>
+      <p>Subscribe to buy my record</p>
     </div>
     <main>
       <p>Look at my cool music page.</p>
