added a main division aand in it include a paragraph text. Also updated CSS file to add background,margin,padding  and font size for the body of the html and header and main.

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -15,7 +15,7 @@
       <p>Subscribe to buy my record</p>
     </div>
     <main>
-      <p>Look at my cool music page.</p>
+      <p>Look at my cool music page!</p>
 
     </main>
     <!-- Create an unordered list with any questions you have -->
