added an unordered list of questions.

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -19,5 +19,9 @@
 
     </main>
     <!-- Create an unordered list with any questions you have -->
+    <ul>
+      <li>What is your favoite record?</li>
+      <li>How do i use JavaScript to create a recod?</li>
+      </ul>
   </body>
 </html>
